--- a/src/LandingPage/Style/LandingPage.css
+++ b/src/LandingPage/Style/LandingPage.css
@@ -1,6 +1,37 @@
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+}
+@media (max-width: 500px){
+    .LandingPageBodyColorHeadInvisible{
+        display: none;
+    }
+    .LandingPageBodyTagInsibleInMobileView{
+        display: none;
+    }
+    body .LandingPageBodyName{
+        font-size: 17px;
+        font-weight: bold;
+    }
+    body .LandingPageBodyPrize{
+        font-size: 19px;
+    }
+    body .LandingPageBodyType{
+        font-size: 18px;
+    }
+    body .LandingPageHeader{
+        width: 100%;
+        min-height: 70px;
+        max-height: 80px;
+    }
+    body .LandingPageHeaderText h1{
+        font-size: 25px;
+        text-align: center;
+    }
+    body .AddToCardAndVisitWebsiteInnerDiv{
+        width: 45%;
+    }
 }
 .LandingPageMain{
     display: flex;
@@ -9,8 +40,8 @@ body{
 }
 .LandingPageHeader{
     width: 100%;
-    min-height: 80px;
-    max-height: 100px;
+    min-height: 100px;
+    height: 10vh;
     background-color: #fa1e74;
 }
 .LandingPageHeaderText h1{
@@ -21,34 +52,44 @@ body{
 .LandingPageBody{
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
-    padding-top: 55px;
-    padding-bottom: 120px;
+    padding-top: 3vh;
+    padding-bottom: 5vh;
+    min-height:82vh;
+}
+@media (max-width: 1000px){
+    .LandingPageBody{
+        flex-wrap: wrap;
+    }
 }
 .LandingPageBodyLeft{
     max-width: 600px;
     min-width: 270px;
     display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
 }
-.LandingPageBodyThumb{
+.LandingPageBodyThumbVertical{
     display: flex;
     flex-direction: column;
-    padding: 10px 15px 10px 15px;
+    padding: 10px 5px 10px 0px;
+    margin-bottom: 10px;
+}
+.LandingPageBodyThumbHorizontal{
+    display: flex;
 }
 .LandingPageBodyThumbImages, .LandingPageBodyThumbImagesActive{
     max-width: 85px;
     min-width: 50px;
+    margin: 8px;
 }
 .LandingPageBodyThumbImages img{
     width: 100%;
-    margin-bottom: 20px;
     border-radius: 5px;
     border: rgb(59, 59, 59) solid 1.5px;
 }
 .LandingPageBodyThumbImagesActive img{
     width: 100%;
-    margin-bottom: 20px;
     border-radius: 5px;
     border: #fa1e74 solid 3px;
     box-shadow: 0 0 7px rgb(255, 0, 128);
@@ -59,7 +100,7 @@ body{
     padding: 10px;
 }
 .LandingPageBodyImage{
-    max-width: 600px;
+    max-width: 470px;
     min-width: 100px;
 }
 .LandingPageBodyIcon{
@@ -74,13 +115,17 @@ body{
     display: flex;
     align-items: center;
 }
+.LandingPageBodyColorHeadInvisible{
+    font-size: 20px;
+    margin-right: 17px;
+}
 .LandingPageBodyColorHead{
     font-size: 20px;
     margin-right: 17px;
 }
 .LandingPageBodyRight{
-    max-width: 500px;
-    min-width: 290px;
+    max-width: 600px;
+    min-width: 270px;
     display: flex;
     flex-direction: column;
     padding-left: 20px;
@@ -89,25 +134,31 @@ body{
 }
 .LandingPageBodyRightHead{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .LandingPageBodyName{
     font-size: 18px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-weight: 600;
 }
 .LandingPageBodyType{
     font-size: 22px;
-    padding-top: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-weight: 400;
 }
 .LandingPageBodyPrize{
+    min-width: 140px;
     text-align: right;
     font-size: 22px;
     color: #fa1e74;
-    padding-right: 20px;
-    padding-left: 80px;
-    font-weight: bold;
-    padding-top: 15px;
+    font-weight: bolder;
 }
 .LandingPageBodyRating{
-    padding-top: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 .LandingPageBodyRating span{
     margin-right: 6px;
@@ -119,28 +170,41 @@ body{
     color: rgb(184, 182, 182);
 }
 .LandingPageBodyDiscription{
-    margin-top: 15px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+.LandingPageBodyGeneralQuestion{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.LandingPageBodyGeneralQuestion span{
+    /* color: blue; */
+    font-weight: 500;
 }
 .LandingPageBodyTag{
-    margin-top: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     display: flex;
 }
 .LandingPageBodyTagMap{
     background-color: #626262;
     color: white;
-    padding-top: 4px;
-    padding-bottom: 4px;
     text-align: center;
-    width: 130px;
-    margin-right: 20px;
-    border-radius: 50px;
+    width: auto;
+    padding: 2px 10px 2px 10px;
+    margin: 4px 20px 4px 0px;
+    height: auto;
+    max-height: 100px;
+    border-radius: 60px;
 }
 .LandingPageBodySizeHead{
-    margin-top: 30px;
+    margin-top: 10px;
+    margin-bottom: 5px;
     font-size: 22px;
 }
 .LandingPageBodySize{
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
 }
 .LandingPageBodySizeMap{
@@ -168,6 +232,13 @@ body{
     color: white;
     cursor: pointer;
 }
+.LandingPageBodySizeOptions{
+    margin-left: 10px;
+    padding: 6px;
+}
+.LandingPageBodySizeOptionsMap{
+    font-size: 22px;
+}
 .LandingPageBodySizeUnderlineMap{
     width: 43px;
     height: 2px;
@@ -187,38 +258,47 @@ body{
     margin-top: 15px;
 }
 .AddToCardAndVisitWebsite{
-    margin-top: 35px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
 }
 .LandingPageBodyAddToCard{
-    max-width: 180px;
+    max-width: 500px;
     min-width: 160px;
     height: 40px;
     text-align: center;
     font-size: 15px;
-    margin-right: 20px;
-    border-radius: 5px;
+    border-radius: 8px;
     border: none;
     margin-top: 10px;
+    margin-bottom: 10px;
     background-color: #fa1e74;
     color: white;
 }
 .LandingPageBodyVisitWebsite{
-    max-width: 180px;
-    min-width: 160px;
+    max-width: 500px;
+    min-width: 140px;
     height: 40px;
     text-align: center;
     font-size: 15px;
-    margin-right: 20px;
-    border-radius: 5px;
+    border-radius: 8px;
     border: black solid 1px;
     margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: white;
 }
-@media (max-width : 500px){
-    .LandingPageBodyAddToCard, .LandingPageBodyVisitWebsite{
-        min-width: 120px;
+@media (max-width : 700px){
+    .AddToCardAndVisitWebsite{
+        justify-content: space-between;
     }
+    .LandingPageBodyAddToCard, .LandingPageBodyVisitWebsite{
+        margin: 0%;
+        width: 100%;
+    }
+}
+.AddToCardAndVisitWebsiteInnerDiv{
+    width: 40%;
 }
 .LandingPageBodyAddToCard:hover{
     border: none;
@@ -290,4 +370,10 @@ body{
     border: none;
     color: white;
     display: none;
+}
+.Flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
